添加了欢迎界面
还没写完登陆

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+   <!--注意顺序 -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/welcome1.css">
+    <!--<link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">-->
     <link rel="stylesheet" href="%PUBLIC_URL%/base.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
