--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/welcome1.css">
     <!--<link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">-->
     <link rel="stylesheet" href="%PUBLIC_URL%/base.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!--
