--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
    <!--注意顺序 -->
     <link rel="stylesheet" href="%PUBLIC_URL%/welcome1.css">
-    <!--<link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css">-->
     <link rel="stylesheet" href="%PUBLIC_URL%/base.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/tree.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
