--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/base.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/tree.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/right.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!--
