修改了welcome界面，加上的沙神的图

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
    <!--注意顺序 -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/welcome1.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/welcome.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/base.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/tree.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
