修改了主页，处理了一些warning

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
    <!--注意顺序 -->
     <link rel="stylesheet" href="%PUBLIC_URL%/welcome.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/welcome_dm.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/welcome_wiki.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/base.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/tree.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
