--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/tree.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/login.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/right.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/class2.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/class3.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/vis-network.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
